extends CanvasLayer



func _on_play_button_pressed():
	pass # Replace with function body.


func _on_controls_button_2_pressed():
	pass # Replace with function body.


func _on_credits_button_pressed():
	pass # Replace with function body.


func _on_exit_button_pressed():
	pass # Replace with function body.
